SERVER-7240 Delay writing PID file to the end of startup