src/mongo/db/modules/enterprise/src/serverless/mongoqd_main.cpp
@@ -774,6 +774,10 @@ ExitCode runMongoqdServer(ServiceContext* serviceContext) {
         return EXIT_NET_ERROR;
     }
 
+    if (!initialize_server_global_state::writePidFile(serviceContext)) {
+        return EXIT_ABRUPT;
+    }
+
     // Startup options are written to the audit log at the end of startup so that cluster server
     // parameters are guaranteed to have been initialized from disk at this point.
     audit::logStartupOptions(tc.get(), serverGlobalParams.parsedOpts);
@@ -781,7 +785,7 @@ ExitCode runMongoqdServer(ServiceContext* serviceContext) {
     serviceContext->notifyStartupComplete();
 
 #if !defined(_WIN32)
-    signalForkSuccess();
+    initialize_server_global_state::signalForkSuccess();
 #else
     if (ntservice::shouldStartService()) {
         ntservice::reportStatus(SERVICE_RUNNING);
@@ -847,7 +851,7 @@ ExitCode main(ServiceContext* serviceContext) {
 
 MONGO_INITIALIZER_GENERAL(ForkServer, ("EndStartupOptionHandling"), ("default"))
 (InitializerContext* context) {
-    forkServerOrDie();
+    initialize_server_global_state::forkServerOrDie();
 }
 
 // Initialize the featureCompatibilityVersion server parameter since mongoqd does not have a
@@ -920,7 +924,7 @@ ExitCode mongoqd_main(int argc, char* argv[]) {
     logCommonStartupWarnings(serverGlobalParams);
 
     try {
-        if (!initializeServerGlobalState(service))
+        if (!initialize_server_global_state::checkSocketPath())
             return EXIT_ABRUPT;
 
         startSignalProcessingThread();
